Implements health check endpoint and redis cache
