# api/swagger.json
@@ -4,6 +4,23 @@
         "contact": {}
     },
     "paths": {
+        "/api/health-check": {
+            "get": {
+                "description": "Verify health check application",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Health Check"
+                ],
+                "summary": "Health Check",
+                "responses": {
+                    "204": {
+                        "description": "No Content"
+                    }
+                }
+            }
+        },
         "/api/v1/categories": {
             "get": {
                 "description": "Find all categories",
