# internal/pkg/server/routes/route.go
@@ -2,6 +2,7 @@ package routes
 
 import (
 	"github.com/tiagompalte/golang-clean-arch-template/application"
+	"github.com/tiagompalte/golang-clean-arch-template/internal/pkg/server/handler"
 	v1 "github.com/tiagompalte/golang-clean-arch-template/internal/pkg/server/routes/v1"
 	"github.com/tiagompalte/golang-clean-arch-template/pkg/server"
 	"github.com/tiagompalte/golang-clean-arch-template/pkg/server/middleware"
@@ -16,6 +17,13 @@ func CreateRoute(app application.App) []server.GroupRoute {
 			},
 			GroupRoutes: []server.GroupRoute{
 				v1.CreateRoute(app),
+			},
+			Routes: []server.Route{
+				{
+					Method:  "GET",
+					Path:    "/health-check",
+					Handler: handler.HealthCheckHandler(app.UseCase().HealthCheck),
+				},
 			},
 		},
 	}
